--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -72,6 +72,7 @@
     <Compile Include="GameControls.cs" />
     <Compile Include="GameQuerying.cs" />
     <Compile Include="CommandsGroup.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="IMap.cs" />
     <Compile Include="MapMovementInput.cs" />
