Added asynchronous calculation of visibility maps via MapGenerator. Fixed problem with wrong visibility area. Fixed problem with wrong visibility range of units created by UnitFactory. Added drawing units of different players with different colors. Added predicate to SelectUnits in GameQuerying.

--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -67,6 +67,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GameLogic\UnitView.cs" />
+    <Compile Include="GameLogic\VisibilityGenerator.cs" />
     <Compile Include="GameLogic\Maps\Pathfinding.cs" />
     <Compile Include="GameLogic\Maps\Ray.cs" />
     <Compile Include="GameLogic\Maps\VisibilityMap.cs" />
