Added memoization of obsctale maps in Map and pushing maps in Physics. Added new epic map. Added movement.

--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -175,5 +175,13 @@
   <ItemGroup>
     <Resource Include="Images\frameMap.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\bigTileMap.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\riverMap.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
