--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -72,6 +72,7 @@
     <Compile Include="GameLogic\Building.cs" />
     <Compile Include="GameLogic\BuildingFactory.cs" />
     <Compile Include="GameLogic\CommandAssignment.cs" />
+    <Compile Include="GameLogic\GameplayOptions.cs" />
     <Compile Include="GameLogic\MovementGenerator.cs" />
     <Compile Include="GameLogic\MovementParameters.cs" />
     <Compile Include="GameLogic\Unit.cs" />
