--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -74,6 +74,8 @@
     <Compile Include="GameLogic\Data\Entities\Corpse.cs" />
     <Compile Include="GameLogic\Data\Entities\EntityFactory.cs" />
     <Compile Include="GameLogic\Data\Entities\Factories.cs" />
+    <Compile Include="GameLogic\Data\Entities\Status.cs" />
+    <Compile Include="GameLogic\Data\Entities\StatusFactory.cs" />
     <Compile Include="GameLogic\Data\Entities\Unit.cs" />
     <Compile Include="GameLogic\Data\GameStaticData.cs" />
     <Compile Include="GameLogic\Structure.cs" />
