--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -135,7 +135,7 @@
     <Compile Include="GameLogic\Player.cs" />
     <Compile Include="GameLogic\Maps\PushingMapGenerator.cs" />
     <Compile Include="GameLogic\Rect.cs" />
-    <Compile Include="GameControls\UnitCommandsInput.cs" />
+    <Compile Include="GameControls\EntityCommandsInput.cs" />
     <Compile Include="GameLogic\Terrain.cs" />
     <Compile Include="GameLogic\Data\Entities\Entity.cs" />
     <Page Include="GUI\MainWindow.xaml">
