--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -107,7 +107,7 @@
     <Compile Include="GameLogic\MovementParameters.cs" />
     <Compile Include="GameLogic\Data\Entities\Tree.cs" />
     <Compile Include="GameLogic\Data\Entities\Animal.cs" />
-    <Compile Include="GameLogic\UnitView.cs" />
+    <Compile Include="GameLogic\View.cs" />
     <Compile Include="GameLogic\VisibilityGenerator.cs" />
     <Compile Include="GameLogic\Maps\Pathfinding.cs" />
     <Compile Include="GameLogic\Maps\Ray.cs" />
